# noters

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  WRITEUP.md  challenge.yaml  compose.yml  note.md
src/: Cargo.toml  Dockerfile  README.md  app.rs  arguments.rs  backends.rs  compose.yml  lib.rs  logging.rs  main.rs  ui.rs
src/backends/: filesystem.rs  mod.rs  sqlite.rs
src/setup/: arguments.rs  logging.rs
src/src/backends/: filesystem.rs
src/ui/: cli.rs  input.rs  io.rs  mod.rs
writeup/: writeup.md
